@@ -28,6 +28,7 @@ SOURCES =   src/ParameterLoader.cpp \
             src/PlotterGraph.cpp \
             src/PlotterGraph2D.cpp \
             src/PlotterHisto.cpp \
+            src/PlotterHisto2D.cpp \
             src/genericPlotter.cpp
 
 # Define object files
