@@ -1,0 +1,91 @@
+//
+//  PlotterGraph.h
+//  
+//
+//  Created by Brian L Dorney on 05/10/16.
+//
+//
+
+#ifndef ____PlotterHisto2D__
+#define ____PlotterHisto2D__
+
+//C++ Includes
+#include <map>
+#include <memory>
+#include <stdio.h>
+#include <string>
+#include <tuple>
+
+//Framework Includes
+#include "PlotterGeneric.h"
+#include "PlotterUtilityTypes.h"
+
+//ROOT Includes
+#include "TFile.h"
+#include "TH2F.h"
+#include "TLegend.h"
+#include "TROOT.h"
+
+namespace QualityControl {
+    namespace Plotter {
+        class PlotterHisto2D : public PlotterGeneric {
+        public:
+            //Constructors
+            //------------------------------------------------------------------------------------------------------------------------------------------
+            //Default
+            PlotterHisto2D();
+            
+            //Destructor
+            //------------------------------------------------------------------------------------------------------------------------------------------
+            ~PlotterHisto2D(){
+                hObs2D.reset();
+            }
+            
+            //Actions - Methods that Do Something
+            //------------------------------------------------------------------------------------------------------------------------------------------
+            
+            //Getters - Methods that Get (i.e. Return) Something
+            //------------------------------------------------------------------------------------------------------------------------------------------
+            
+            //Printers - Methods that Print Something
+            //------------------------------------------------------------------------------------------------------------------------------------------
+            
+            //Setters - Methods that Set Something
+            //------------------------------------------------------------------------------------------------------------------------------------------
+            
+        protected:
+            //Actions - Methods that Do Something
+            //------------------------------------------------------------------------------------------------------------------------------------------
+            //Intializes the plots defined in m_canvInfo
+            //To be over-ridded by inherited classes
+            void initPlot(InfoPlot & plotInfo);
+            
+            //Makes the plots defined in m_canvInfo
+            //To be over-ridded by inherited classes
+            void addPlot(TLegend & inputLegend, InfoPlot & plotInfo);
+            
+            //To be over-ridded by inherited classes
+            virtual void drawPlots();
+            
+            //Saves all TObjects to an output ROOT file
+            //To be over-ridded by inherited classes
+            virtual void write2RootFile();
+            
+            //Getters - Methods that Get (i.e. Return) Something
+            //------------------------------------------------------------------------------------------------------------------------------------------
+            
+            //Printers - Methods that Print Something
+            //------------------------------------------------------------------------------------------------------------------------------------------
+            
+            //Setters - Methods that Set Something
+            //------------------------------------------------------------------------------------------------------------------------------------------
+            
+            //Attributes
+            //------------------------------------------------------------------------------------------------------------------------------------------
+            std::shared_ptr<TH2F> hObs2D;
+        }; //End class PlotterHisto2D
+    } //End namespace Plotter
+} //End namespace QualityControl
+
+
+#endif /* defined(____PlotterHisto2D__) */
